<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/water_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/content_description"
        android:src="@drawable/water"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center" >

            <LinearLayout
                android:id="@+id/fan_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fan_background" >

                <ImageView
                    android:id="@+id/fan_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/fan_img" />
            </LinearLayout>

            <ImageView
                android:id="@+id/tick_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_description"
                android:src="@drawable/tick"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp" >

            <TextView
                android:id="@+id/cooling_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cooling_title"
                android:textColor="@android:color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/cooling_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cooling_done"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:visibility="gone" />
        </FrameLayout>

        <TextView
            android:id="@+id/process_killed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/memory_cleaned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/finish_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/primary_dark"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/exit_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/exit"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/done_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/done"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</FrameLayout>