<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:wave="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ToolBarTheme" >
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.phonecooler.cooldown.coolermaster.wave.WaveView
            android:id="@+id/wave_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/lnlayout"
            android:background="@color/primary"
            wave:above_wave_color="@color/primary_dark"
            wave:blow_wave_color="@color/primary_dark"
            wave:progress="80"
            wave:wave_height="little"
            wave:wave_hz="normal"
            wave:wave_length="middle" />

        <LinearLayout
            android:id="@id/lnlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tvRam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@android:color/white"
                    android:textSize="44sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/tvRam"
                    android:layout_toRightOf="@id/tvRam"
                    android:text="@string/percent"
                    android:textColor="@android:color/white"
                    android:textSize="32sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvRam"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/ram_used"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tvTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@android:color/white"
                    android:textSize="44sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSymbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/tvTemp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@id/tvTemp"
                    android:layout_toRightOf="@id/tvTemp"
                    android:text="@string/degree"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvTemp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/temp"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <fragment
        android:id="@+id/headlines_fragment"
        android:name="com.phonecooler.cooldown.coolermaster.TaskFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout 
        android:orientation="vertical"
        android:id="@+id/lineAds1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>